Update sponsor images to use relative paths

--- a/index.html
+++ b/index.html
@@ -457,13 +457,13 @@
   <section class="sponsors">
     <h2>Our Proud Sponsors</h2>
     <div class="sponsor-logos">
-      <img src="images/sponsors/sponsor1.jpg" alt="Sponsor 1">
-      <img src="images/sponsors/sponsor2.jpg" alt="Sponsor 2">
-      <img src="images/sponsors/sponsor3.jpg" alt="Sponsor 3">
-      <img src="images/sponsors/sponsor4.jpg" alt="Sponsor 4">
-      <img src="images/sponsors/sponsor5.jpg" alt="Sponsor 5">
-      <img src="images/sponsors/sponsor6.jpg" alt="Sponsor 6">
-      <img src="images/sponsors/sponsor7.jpg" alt="Sponsor 7">
+      <img src="sponsor1.jpg" alt="Sponsor 1">
+      <img src="sponsor2.jpg" alt="Sponsor 2">
+      <img src="sponsor3.jpg" alt="Sponsor 3">
+      <img src="sponsor4.jpg" alt="Sponsor 4">
+      <img src="sponsor5.jpg" alt="Sponsor 5">
+      <img src="sponsor6.jpg" alt="Sponsor 6">
+      <img src="sponsor7.jpg" alt="Sponsor 7">
     </div>
   </section>
 
