Split header title into two lines

--- a/tutoring.html
+++ b/tutoring.html
@@ -285,7 +285,10 @@
 <body>
 
   <header>
-    <h1>Lithako Edu Tutoring Service</h1>
+    <h1>
+      Lithako Edu<br>
+      Tutoring Service
+    </h1>
     <p>“U decide – Onsite or Online”</p>
   </header>
 
